--- a/mysql_test.vcxproj.filters
+++ b/mysql_test.vcxproj.filters
@@ -18,7 +18,7 @@
     <ClCompile Include="test.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="weather.c">
+    <ClCompile Include="weather1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
